--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -622,6 +622,10 @@ video {
   margin-top: 9rem;
 }
 
+.mt-44 {
+  margin-top: 11rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -630,32 +634,8 @@ video {
   margin-top: 1.75rem;
 }
 
-.mt-80 {
-  margin-top: 20rem;
-}
-
 .mt-72 {
   margin-top: 18rem;
-}
-
-.mt-64 {
-  margin-top: 16rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-52 {
-  margin-top: 13rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-44 {
-  margin-top: 11rem;
 }
 
 .block {
@@ -874,6 +854,10 @@ video {
   padding-top: 0.25rem;
 }
 
+.font-source-code-pro {
+  font-family: Source Code Pro, monospace;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -896,11 +880,6 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-blue-300 {
-  --tw-text-opacity: 1;
-  color: rgb(147 197 253 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -991,11 +970,6 @@ video {
 :is(.dark .dark\:bg-slate-950) {
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-orange-950) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(67 20 7 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:bg-gradient-to-r) {
